--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!Doctype HTML>
-<html>
+<html lang=en>
 
 <head>
     <title>About Laura</title>
@@ -23,7 +23,8 @@
         <div>
         </div>
     </header>
-    <div class="centerblock">
+
+    <div class="centerblock clearfix">
         <div class="whitebox">
             <div class="aboutme">
                 <h1>About Me</h1>
@@ -32,29 +33,29 @@
                     <img src="Assets/Images/mypic.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
                 </div>
                 <div class="ptext clearfix">
-                    <p>This is my placement text. This is my placement text. This is my placement text. This is my
-                        placement text. This is my placement text.This is my placement text. This is my placement text.
-                        This is my placement text. This is my
-                        placement text. This is my placement text. </p>
-                    <p>This is the second paragraph. This is the second paragraph. This is the second paragraph. This
-                        is the second paragraph. This is the second paragraph. This is the second paragraph.This is the
-                        second paragraph. This is the second paragraph.</p>
-                    <p>This is the third paragraph. This is the third paragraph. This is the third paragraph. This is
-                        the third paragraph.This is the third paragraph. This is the third paragraph. This is the third
-                        paragraph. This is
-                        the third paragraph. This is the third paragraph. This is the third paragraph. This is the
-                        third paragraph. This is
-                        the third paragraph.</p>
+                    <p>Hello! I find that it’s always a little nerve wracking to write about oneself. I’m always stuck
+                        between saying nothing, which results in a blank and boring page, and sharing too much
+                        information, such as the contents of my breakfast. I hope for your sake that I have achieved
+                        the right balance between the two.</p>
+                    <p>I am currently enrolled in Case Western Reserve University’s Coding Bootcamp. This course has
+                        opened my eyes to the vast possibilities of what can be achieved through modern web
+                        development. I am excited to explore those possibilities. I am also passionate about solving
+                        problems and look forward to solving web and technical problems for companies and individuals.</p>
+                    <p>I am familiar with HTML, CSS, Bootstrap, and everything else that is important. I hope that you
+                        will consider me for you Full Stack Web Development needs.</p>
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="teal">
-            </div>
-            <div class="grey">
-                <p>Copyright &#169</p>
-            </div>
-        </footer>
+    </div>
+
+
+    <footer>
+        <div class="teal">
+        </div>
+        <div class="grey">
+            <p>Copyright &#169;</p>
+        </div>
+    </footer>
 </body>
 
 </html>
