--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!Doctype HTML>
-<html>
+<html lang=en>
 
 <head>
     <title>Laura's Portfolio</title>
@@ -30,43 +30,44 @@
                 <hr>
                 <div class="portfoliopics">
                     <div class="float">
-                        <img src="Assets/Images/mypic.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
+                        <img src="Assets/Images/hangman2.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
                         <div class="textonpic">
-                            <p>Text for Box 1</p>
+                            <p>Hangman</p>
                         </div>
                     </div>
                     <div class="float">
-                        <img src="Assets/Images/mypic.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
+                        <img src="Assets/Images/rpggame.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
                         <div class="textonpic">
-                            <p>Text for Box 2</p>
+                            <p>RPG Game</p>
                         </div>
                     </div>
                     <div class="float">
-                        <img src="Assets/Images/mypic.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
+                        <img src="Assets/Images/trivia.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
                         <div class="textonpic">
-                            <p>Text for Box 3</p>
+                            <p>Trivia Game</p>
                         </div>
                     </div>
-                    <div class="float" >
-                        <img src="Assets/Images/mypic.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
+                    <div class="float">
+                        <img src="Assets/Images/widget.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
                         <div class="textonpic">
-                            <p>Text for Box 4</p>
+                            <p>Rutgets Info Widget</p>
                         </div>
                     </div>
-                    <div>
-                        <img src="Assets/Images/mypic.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
-                        <div class="textonpic">
-                            <p>Text for Box 5</p>
+                    <div class="float clearfix">
+                        <img src="Assets/Images/rockpaperscissors.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
+                        <div class="textonpic clearfix">
+                            <p>Rock Paper Scissors</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="teal">
+    </div>
+        <footer class="clearfix">
+            <div class="teal clearfix">
             </div>
             <div class="grey">
-                <p>Copyright &#169</p>
+                <p>Copyright &#169;</p>
             </div>
         </footer>
 </body>
