--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!Doctype HTML>
-<html>
+<html lang=en>
 
 <head>
     <title>Contact Laura</title>
@@ -28,26 +28,27 @@
             <div class="aboutme">
                 <h1>Contact</h1>
                 <hr>
-                <div>
-                    <!--Error: the form submission isn't working correctly.-->
+                <div id="formtext">
                     <form action="mailto:laurashortridge85@gmail.com" method="post" enctype="text/plain">
-                        Name<br>
-                        <input type="text" name="name"><br>
-                        Email<br>
-                        <input type="email" name="email"><br>
-                        Message<br>
-                        <input type="text" name="text"><br>
+                        <label for="Name">Name</label><br>
+                            <input type="text" name="name" placeholder="Your name.." class="form"><br>
+                        <label for="Email">Email</label><br>
+                            <input type="email" name="email" placeholder="youremail@email.com" class="form"><br>
+                        <label for="Message">Message</label><br>
+                            <textarea name="subject" placeholder="Write something.." class="form" id="formmessage"></textarea>
                         <br>
-                        <input type="submit" value="Submit">
+                        <input type="submit" value="Submit" id="button">
                     </form>
                 </div>
             </div>
         </div>
+    </div>
         <footer>
             <div class="teal">
             </div>
             <div class="grey">
-                <p>Copyright &#169</p>
+                <p>Copyright &#169;</p>
             </div>
         </footer>
 </body>
+</html>
