--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h1>About Me</h1>
                 <hr>
                 <div id="mypic">
-                    <img src="./Assets/Images/mypic.jpg" alt="Laura Shortridge" style="width:200px;height:200px;">
+                    <img src="./Assets/Images/mypic.JPG" alt="Laura Shortridge" style="width:200px;height:200px;">
                 </div>
                 <div class="ptext clearfix">
                     <p>Hello! I find that it’s always a little nerve wracking to write about oneself. I’m always stuck
